[package]
name = "bulkssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
russh = { version = "0.37", features = ["openssl"] }
async-ssh2-tokio = "0.6.4"
lazy_static = "1.4.0"
tokio = "1.28.2"
whoami = "1.4.0"
regex = "1.8.4"
